Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </header>
   <body>
     <section class="promo">
-      <video controls poster="Aquí pones el link de una imagen, yo quite la mía para que no sea igual”
+      <video controls poster="”
 
         src="https://cdn.videvo.net/videvo_files/video/premium/video0036/small_watermarked/computer_code00_preview.mp4"
 
